--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,10 +3,19 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [{
-        "type": "java",
-        "name": "Debug (Launch) - Current File",
-        "request": "launch",
-        "mainClass": "httpc.java"
-    }]
+    "configurations": [
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - httpc",
+            "request": "launch",
+            "mainClass": "httpc",
+            "projectName": "COMP445_b2b1b131"
+        },
+        {
+            "type": "java",
+            "name": "Debug (Launch) - Current File",
+            "request": "launch",
+            "mainClass": "httpc.java"
+        }
+    ]
 }
